Fixed sections styles

--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,9 @@ body {
     padding: 0;
 }
 
-#container {
+.container {
     display: flex;
     flex-direction: column;
-    justify-content: center; /* Centra verticalmente en el viewport */
-    align-items: center; /* Centra horizontalmente en el viewport */
     min-height: 100vh;
     background-image: url("assets/img/background.jpg");
     background-position: center;
@@ -15,49 +13,45 @@ body {
     background-attachment: fixed;
 }
 
-#presentation {
-    text-align: center;
-    color: white;
-    position: fixed; /* Fija el elemento en la ventana */
-    top: 0; /* Lo ancla en la parte superior */
+#header {
+    top: 0; 
     left: 0;
     right: 0;
-}
-
-#presentation h1, #presentation h3 { 
+    text-align: center;
     color: rgb(236, 224, 243); 
 }
 
-#presentation h1 { 
+#header h1 { 
     font-family: 'Blacklisted', sans-serif; 
     font-size: 60px;
 }
 
-#presentation h3 { 
+#header h3 { 
     font-family: 'Snorter', sans-serif; 
     font-size: 50px; 
 }
 
-.hidden { 
-    display: none; 
-}
+.hidden { display: none; }
 
-.sections-container {
+#main {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center; /* Centra horizontalmente las secciones */
-    align-items: center; /* Centra verticalmente las secciones */
+    justify-content: center; 
+    align-items: center; 
+    margin-right: 3.5%;
+    margin-left: 3.5%;
 }
 
-.sections-container section {
+#main section {
     flex: 1;
     width: 500px;
-    min-width: 200px;
-    margin: 10px;
+    min-width: 500px;
+    margin: 35px;
+    padding: 15px;
     background-color: rgba(184, 193, 231, 0.7);
-    padding: 20px;
     border: 1px solid rgb(255, 255, 255);
+    text-align: center;
 }
 
 .button-53 {
