--- a/styles.css
+++ b/styles.css
@@ -57,13 +57,9 @@ body {
     color: rgb(72 13 67);
 }
 
-#main h2 {
-    font-size: 24px;
-}
+#main h2 { font-size: 24px; }
 
-#main p {
-    font-size: 16px;
-}
+#main p { font-size: 16px; }
 
 .button-53 {
     width: 100%;
