--- a/styles.css
+++ b/styles.css
@@ -34,9 +34,31 @@ body {
 
 .hidden { display: none; }
 
-#main {
+nav ul {
+
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    margin: 0;
+    
+}
+
+nav ul li {
+
+    margin: 5px;
+    list-style: none;
+
+}
+
+nav ul li a {
+
+    text-decoration: none;
+    color: rgb(211 179 62); 
+
+}
+
+#main {
+    display: flex;
     flex-wrap: wrap;
     justify-content: center; 
     align-items: center; 
@@ -45,9 +67,10 @@ body {
 }
 
 #main section {
-    flex: 1;
+    flex-grow: 1;
     width: 500px;
     min-width: 500px;
+    max-width: 600px;
     margin: 35px;
     padding: 25px;
     background-color: #ead4ed91;
