--- a/styles.css
+++ b/styles.css
@@ -3,115 +3,69 @@ body {
     padding: 0;
 }
 
-.container {
+#container {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
     background-image: url("assets/img/background.jpg");
+    background-attachment: fixed;
     background-position: center;
     background-size: cover;
-    background-attachment: fixed;
+    min-height: 100vh;
+    width: 100%;
 }
 
 #header {
-    top: 0;
-    left: 0;
-    right: 0;
-    text-align: center;
-}
-
-#header h1 {
-    font-family: 'Blacklisted', sans-serif;
-    font-size: 60px;
-    color: rgb(211 179 62);
-}
-
-#header h3 {
-    font-family: 'Snorter', sans-serif;
-    font-size: 50px;
-    color: rgb(72 13 67);
-}
-
-.hidden { display: none; }
-
-nav ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin: 0;
-}
-
-nav ul li {
-    margin: 35px;
-    list-style: none; 
-}
-
-nav ul li a {
-    text-decoration: none;
-    color: rgb(211 179 62);
-    font-size: 19px;
-}
-
-#main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    margin-right: 3.5%;
-    margin-left: 3.5%;
-    align-items: stretch; /* Alinea verticalmente todas las secciones en la fila */
-}
-
-#main section {
-    word-wrap: break-word; /* Rompe palabras largas */
-    width: 650px;
-    min-width: 500px;
-    margin: 35px;
-    padding: 25px;
-    background-color: #ead4ed91;
-    border: 2px solid rgb(72 13 67);
     text-align: center;
-    border-radius: 2px;
-    color: rgb(72 13 67);
-    transition: transform 0.3s ease-in-out;
-    cursor: pointer;
-    transform: scale(1); /* Escala normal */
 }
 
-#main section:hover { transform: scale(1.05); } /* Escala cuando se pasa el ratón por encima */ 
+#header-text-yellow, #header-text-light {
+    font-family: 'Blacklisted', sans-serif;
+    font-size: 60px;
+}
 
-#main h2 { font-size: 24px; }
+#header-text-yellow { 
+    color: rgb(248, 219, 114);     
+    margin-right: 35px;
+}
 
-#main p { font-size: 16px; }
+#header-text-light { color: #dbd5e4; }
+
+#button-container {
+    text-align: center;
+    justify-content: center;
+}
 
 .button-53 {
     width: 100%;
     max-width: 460px;
-    background-color: #ead4ed91;
-    border: 0;
-    color: rgb(72 13 67);
+    margin-top: 150px;
+    color:  #3d3c3f;
+    padding: 0.75rem 1.65rem;
+    background-color: rgb(248, 219, 114);
     font-size: 1rem;
     font-weight: 700;
     line-height: 1.75rem;
-    padding: 0.75rem 1.65rem;
-    text-decoration: none;
+    border: 0;
     cursor: pointer;
+    text-decoration: none;
     user-select: none;
     touch-action: manipulation;
     transform: rotate(-2deg);
-    margin-top: 50px;
 }
 
 .button-53:focus { outline: 0; }
 
 .button-53:after {
-    content: '';
     position: absolute;
+    width: calc(100% - 1px);
+    height: calc(100% - 1px);
     border: 1px solid #000000;
     bottom: 4px;
     left: 4px;
-    width: calc(100% - 1px);
-height: calc(100% - 1px);
+    content: '';
 }
 
 .button-53:hover:after {
@@ -119,12 +73,76 @@ height: calc(100% - 1px);
     left: 2px;
 }
 
-@media (min-width: 768px) {
+.hidden { display: none; }
 
-.button-53 {
-    padding: 0.75rem 3rem;
-    font-size: 1.25rem;
+#navigation ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
 }
+
+#navigation ul li {
+    list-style: none; 
+    transform: scale(1);
+    margin-right: 35px;
+    margin-bottom: 25px;
+}
+
+#navigation ul li:hover { transform: scale(1.02); }
+
+#navigation ul li a {
+    font-family: 'Raleway', sans-serif;
+    font-size: 19px;
+    font-weight: bold;
+    transition: transform 0.2s; /* Agrega una transición suave */
+    text-decoration: none;
+    color: #b4a9c2;
+}
+
+#navigation ul li a:hover {
+    color: rgb(211 179 62); /* Cambia el color del texto al pasar el ratón por encima */
+    transition: color 0.5s; /* Agrega una transición de color */
+}
+
+#main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#main section {
+    width: 1000px;
+    margin: 25px;
+    transform: scale(1); /* Escala normal */
+    transition: transform 0.3s ease-in-out;
+    border: 1px solid rgb(211 179 62);
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.801);
+    color: #dbd5e4;
+}
+
+#main section:hover { transform: scale(1.05); } /* Escala cuando se pasa el ratón por encima */ 
+
+#main section h2 { 
+    text-align: center;
+    font-size: 24px; 
+    margin: 40px;
+    color:  rgb(211 179 62);
+}
+
+#main section p { 
+    font-size: 17.5px;
+    line-height: 1.75;
+    margin: 50px;
+}
+
+@media (min-width: 768px) {
+    .button-53 {
+        padding: 0.75rem 3rem;
+        font-size: 1.25rem;
+    }
 }
 
 @font-face {
