--- a/styles.css
+++ b/styles.css
@@ -3,35 +3,58 @@ body {
     padding: 0;
 }
 
+/* Contenedor principal de la página */
+
 #container {
-    display: flex;
+    display: flex; 
     flex-direction: column;
-    background-image: url("assets/img/background.jpg");
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
-    min-height: 100vh;
+    background-image: url("assets/img/background-2.jpg");
+    background-attachment: fixed; 
+    background-position: center; 
+    background-size: cover; 
+    min-height: 100vh; 
     width: 100%;
 }
 
+/* Estilos para el encabezado de la página */
+
 #header {
-    display: flex;
-    flex-wrap: wrap;
+    display: flex; 
+    flex-wrap: wrap; 
     justify-content: center;
     text-align: center;
 }
 
 #header-text-yellow, #header-text-light {
-    font-family: 'Blacklisted', sans-serif;
+    font-family: 'Blacklisted', sans-serif; 
     font-size: 60px;
+    user-select: none; 
+    transition: transform 0.2s; 
+    transition: box-shadow 0.3s ease;
+    padding: 20px;
 }
 
-#header-text-yellow { 
-    color: rgb(248, 219, 114);     
-    margin-right: 35px;
+#header-text-yellow {
+    color: rgb(248, 219, 114); 
+    margin-right: 35px; 
+
 }
 
 #header-text-light { color: #dbd5e4; }
+
+#header-text-yellow:hover {
+    transition: color 0.5s; 
+    animation: tilt 0.3s ease infinite alternate; 
+    box-shadow: 0 0 10px 5px rgb(248, 219, 114, 0.7); 
+}
+
+#header-text-light:hover {
+    transition: color 0.5s; 
+    animation: tilt 0.3s ease infinite alternate; 
+    box-shadow: 0 0 10px 5px #dbd5e4; 
+}
+
+/* Estilos para el contenedor del botón y el botón */
 
 #button-container {
     text-align: center;
@@ -39,117 +62,195 @@ body {
 }
 
 .button-53 {
-    width: 100%;
-    max-width: 460px;
-    margin-top: 150px;
-    color:  #3d3c3f;
-    padding: 0.75rem 1.65rem;
-    background-color: rgb(248, 219, 114);
+    width: 100%; 
+    max-width: 460px; 
+    margin-top: 150px; 
+    color: #3d3c3f;
+    padding: 0.75rem 1.65rem; 
+    background-color: rgb(248, 219, 114); 
     font-size: 1rem;
     font-weight: 700;
-    line-height: 1.75rem;
+    line-height: 1.75rem; 
     border: 0;
-    cursor: pointer;
-    text-decoration: none;
-    user-select: none;
+    cursor: pointer; 
+    text-decoration: none; 
+    user-select: none; 
     touch-action: manipulation;
-    transform: rotate(-2deg);
+    transform: rotate(-2deg); /
 }
 
 .button-53:focus { outline: 0; }
 
 .button-53:after {
-    position: absolute;
-    width: calc(100% - 1px);
-    height: calc(100% - 1px);
+    position: absolute; 
+    width: calc(100% - 1px); 
+    height: calc(100% - 1px); 
     border: 1px solid #000000;
-    bottom: 4px;
-    left: 4px;
-    content: '';
+    bottom: 4px; 
+    left: 4px; 
+    content: ''; 
 }
 
 .button-53:hover:after {
-    bottom: 2px;
+    bottom: 2px; 
     left: 2px;
 }
 
+/* Clase para ocultar elementos */
+
 .hidden { display: none; }
 
+/* Estilos para la barra de navegación */
+
 #navigation ul {
-    display: flex;
-    flex-wrap: wrap;
+    display: flex; 
+    flex-wrap: wrap; 
     justify-content: center;
-    text-align: center;
+    text-align: center; 
 }
 
 #navigation ul li {
     list-style: none; 
-    transform: scale(1);
-    margin-right: 35px;
+    transform: scale(1); 
+    margin-right: 35px; 
     margin-bottom: 25px;
 }
 
-#navigation ul li:hover { transform: scale(1.02); }
-
 #navigation ul li a {
     font-family: 'Raleway', sans-serif;
-    font-size: 19px;
-    font-weight: bold;
-    transition: transform 0.2s; /* Agrega una transición suave */
-    text-decoration: none;
-    color: #b4a9c2;
+    font-size: 19px; 
+    font-weight: bold; 
+    transition: transform 0.2s;
+    transition: box-shadow 0.3s ease;
+    text-decoration: none; 
+    color: #b4a9c2; 
+    display: inline-block;
+    padding: 10px;
+    user-select: none; 
 }
 
 #navigation ul li a:hover {
-    color: rgb(211 179 62); /* Cambia el color del texto al pasar el ratón por encima */
-    transition: color 0.5s; /* Agrega una transición de color */
+    color: rgb(211 179 62); 
+    transition: color 0.5s; 
+    animation: tilt 0.3s ease infinite alternate;
+    box-shadow: 0 0 10px 5px rgb(248, 219, 114, 0.7); 
 }
 
+/* Estilos para la sección principal de la página */
+
 #main {
-    display: flex;
+    display: flex; 
     flex-wrap: wrap;
     justify-content: center;
 }
 
+/* Estilos para las secciones individuales */
+
 #main section {
     width: 1000px;
-    margin: 25px;
-    transform: scale(1); /* Escala normal */
-    transition: transform 0.3s ease-in-out;
-    border: 1px solid rgb(211 179 62);
-    border-radius: 5px;
-    cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.801);
-    color: #dbd5e4;
+    margin: 25px; 
+    transform: scale(1); 
+    transition: transform 0.3s ease-in-out; 
+    border: 1px solid rgb(211 179 62); 
+    border-radius: 5px; 
+    cursor: pointer; 
+    background-color: rgba(0, 0, 0, 0.9); 
+    color: #dbd5e4; 
+    view-timeline-name: --section;
+    view-timeline-axis: block; 
+    animation-timeline: --section; 
+    animation-name: show;
+    animation-range: entry 25% cover 23%; 
+    animation-fill-mode: both; 
 }
 
-#main section:hover { transform: scale(1.05); } /* Escala cuando se pasa el ratón por encima */ 
-
-#main section h2 { 
-    text-align: center;
+#main section h2 {
+    text-align: center; 
     font-size: 24px; 
-    margin: 40px;
-    color:  rgb(211 179 62);
+    margin: 40px; 
+    color: rgb(211 179 62); 
 }
 
-#main section p { 
-    font-size: 17.5px;
-    line-height: 1.75;
+#main section p {
+    font-size: 17.5px; 
+    line-height: 1.75; 
     margin: 50px;
 }
 
-@media (min-width: 768px) {
-    .button-53 {
-        padding: 0.75rem 3rem;
-        font-size: 1.25rem;
-    }
+#main section .technologies-img {
+    display: inline-block;
+    justify-content: center;
+    margin-bottom: 15px;
 }
+
+#main section .technologies-img img {
+    width: 75px;
+    height: 75px;
+    padding: 15px;
+}
+
+#main section .contact-links {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 15px;
+}
+
+#main section .contact-links img {
+    height: 50px;
+    width: 50px;
+    padding: 15px;
+}
+
+/* Keyframes */
+
+@keyframes show {
+
+    from {
+        opacity: 0; 
+        scale: 25%; 
+    }
+
+    to {
+        opacity: 1;
+        scale: 100%;
+    }
+
+}
+
+@keyframes tilt {
+
+    0%, 100% { transform: rotate(0deg); }
+
+    25% { transform: rotate(5deg);  }
+    
+    50% { transform: rotate(-5deg); }
+
+    75% { transform: rotate(3deg); }
+
+}
+
+#main section:hover { transform: scale(1.05); }
+
+
+/* Estilos responsivos para pantallas más grandes */
+
+@media (min-width: 768px) {
+
+    .button-53 {
+        padding: 0.75rem 3rem; 
+        font-size: 1.25rem; 
+    }
+    
+}
+
+/* Fuentes personalizadas */
 
 @font-face {
     font-family: 'Blacklisted';
     src: url('assets/fonts/blacklisted.ttf') format('opentype');
 }
 
+/* Incorpora la fuente Snorter */
 @font-face {
     font-family: 'Snorter';
     src: url('assets/fonts/snorter.ttf') format('opentype');
