--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 #container {
     display: flex; 
     flex-direction: column;
-    background-image: url("assets/img/background-2.jpg");
+    background-image: url("assets/img/background-3.jpg");
     background-attachment: fixed; 
     background-position: center; 
     background-size: cover; 
@@ -32,6 +32,7 @@ body {
     transition: transform 0.2s; 
     transition: box-shadow 0.3s ease;
     padding: 20px;
+    border-radius: 10px; 
 }
 
 #header-text-yellow {
@@ -40,18 +41,18 @@ body {
 
 }
 
-#header-text-light { color: #dbd5e4; }
+#header-text-light { color: #dbd5e4be; }
 
 #header-text-yellow:hover {
     transition: color 0.5s; 
     animation: tilt 0.3s ease infinite alternate; 
-    box-shadow: 0 0 10px 5px rgb(248, 219, 114, 0.7); 
+    box-shadow: 0 0 10px 10px rgba(248, 219, 114, 0.75); 
 }
 
 #header-text-light:hover {
     transition: color 0.5s; 
     animation: tilt 0.3s ease infinite alternate; 
-    box-shadow: 0 0 10px 5px #dbd5e4; 
+    box-shadow: 0 0 10px 10px #dbd5e4be; 
 }
 
 /* Estilos para el contenedor del botón y el botón */
@@ -123,17 +124,17 @@ body {
     transition: transform 0.2s;
     transition: box-shadow 0.3s ease;
     text-decoration: none; 
-    color: #b4a9c2; 
+    color: #dbd5e4; 
     display: inline-block;
     padding: 10px;
     user-select: none; 
+    border-radius: 5px; 
 }
 
 #navigation ul li a:hover {
-    color: rgb(211 179 62); 
+    color: rgb(248, 219, 114); 
     transition: color 0.5s; 
     animation: tilt 0.3s ease infinite alternate;
-    box-shadow: 0 0 10px 5px rgb(248, 219, 114, 0.7); 
 }
 
 /* Estilos para la sección principal de la página */
@@ -150,9 +151,9 @@ body {
     width: 1000px;
     margin: 25px; 
     transform: scale(1); 
+    min-height: 250px;
     transition: transform 0.3s ease-in-out; 
-    border: 1px solid rgb(211 179 62); 
-    border-radius: 5px; 
+    border-radius: 10px; 
     cursor: pointer; 
     background-color: rgba(0, 0, 0, 0.9); 
     color: #dbd5e4; 
@@ -162,19 +163,21 @@ body {
     animation-name: show;
     animation-range: entry 25% cover 23%; 
     animation-fill-mode: both; 
+    box-shadow: 0 0 5px 2px rgb(248, 219, 114, 0.85);
 }
 
 #main section h2 {
     text-align: center; 
     font-size: 24px; 
     margin: 40px; 
-    color: rgb(211 179 62); 
+    color: rgb(248, 219, 114); 
 }
 
 #main section p {
     font-size: 17.5px; 
     line-height: 1.75; 
     margin: 50px;
+    color: #dbd5e4;
 }
 
 #main section .technologies-img {
@@ -240,7 +243,7 @@ body {
         padding: 0.75rem 3rem; 
         font-size: 1.25rem; 
     }
-    
+
 }
 
 /* Fuentes personalizadas */
