--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: rgb(0, 0, 0);  
+    background-color: black;  
     /*
     background-image: url("assets/img/background-3.jpg");
     background-attachment: fixed; 
@@ -46,12 +46,13 @@ body {
 }
 
 #header .my-photo {
-    background-image: url("assets/img/me.jpeg");
+    background-image: url("assets/img/me.png");
+    background-color: white;
     background-attachment: fixed; 
     background-position: center; 
     background-size: cover;
-    width: 150px;
-    height: 150px;
+    width: 175px;
+    height: 200px;
     border-radius: 50%;
     animation: bounce 3s ease-in-out infinite;
     border: 1px solid rgba(204, 203, 203);
@@ -121,7 +122,7 @@ body {
     animation-name: show;
     animation-range: entry 25% cover 23%; 
     animation-fill-mode: both; 
-    background-color: rgba(0, 0, 0, 0.85); 
+    background-color: rgb(15, 13, 13,0.9); 
     color: rgba(204, 203, 203);
     box-shadow: 0 0 7px 1px rgba(204, 203, 203, 0.658);
     border-radius: 10px; 
@@ -164,7 +165,8 @@ body {
 #main section .contact-links img {
     height: 50px;
     width: 50px;
-    margin-right: 35px;
+    margin-right: 17px;
+    margin-left: 17px;
 }
 
 /* Keyframes */
