--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,13 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: black;  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(70, 1, 70, 0.25);
+    
     /*
+    background-color: black;  
     background-image: url("assets/img/background-3.jpg");
     background-attachment: fixed; 
     background-position: center; 
@@ -17,7 +22,7 @@ body {
     display: flex; 
     flex-direction: column;
     min-height: 100vh; 
-    width: 80%;
+    width: 60%;
     opacity: 0;
     transition: opacity 1.5s ease-in-out;
     margin: 0 auto;
@@ -26,12 +31,23 @@ body {
 
 #container.show { opacity: 1; }
 
+video {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+}
+
 /* Estilos para el encabezado de la página */
 
 #header {
     display: flex; 
     flex-wrap: wrap; 
-    justify-content: space-around;
+    width: 100%;
+    justify-content: space-evenly;
     align-items: center;
     text-align: center;
     padding: 30px;
@@ -39,10 +55,10 @@ body {
 
 #header-text {
     font-family: 'Blacklisted', sans-serif; 
-    font-size: 60px;
+    font-size: 75px;
     transition: transform 0.2s; 
     border-radius: 10px;
-    color: rgba(204, 203, 203);
+    color: rgb(235, 212, 235);
 }
 
 #header .my-photo {
@@ -52,11 +68,10 @@ body {
     background-position: center; 
     background-size: cover;
     width: 175px;
-    height: 200px;
+    height: 175px;
     border-radius: 50%;
     animation: bounce 3s ease-in-out infinite;
-    border: 1px solid rgba(204, 203, 203);
-    /* box-shadow: 0 0 10px 2px white; */
+    box-shadow: 0 0 4px 2px rgba(235, 212, 235); 
   }
 
 #header-text:hover {
@@ -69,7 +84,11 @@ body {
 
 .hidden { display: none; }
 
+
 /* Estilos para la barra de navegación */
+
+#navigation { width: 100%; }
+
 #navigation ul {
     display: flex; 
     flex-wrap: wrap; 
@@ -88,10 +107,10 @@ body {
 #navigation ul li a {
     display: inline-block;
     font-family: 'Raleway', sans-serif;
-    font-size: 19px; 
+    font-size: 22px; 
     font-weight: bold; 
     text-decoration: none; 
-    color: rgba(204, 203, 203); 
+    color: rgb(235, 212, 235);
     padding: 15px;
     /* transition: color 0.2s; */
 }
@@ -107,12 +126,13 @@ body {
     display: flex; 
     flex-wrap: wrap;
     justify-content: center;
+    width: 100%;
 }
 
 /* Estilos para las secciones individuales */
 
 #main section {
-    width: 1000px;
+    width: 100%;
     min-height: 250px;
     transform: scale(1);
     transition: transform 0.3s ease-in-out; 
@@ -122,9 +142,10 @@ body {
     animation-name: show;
     animation-range: entry 25% cover 23%; 
     animation-fill-mode: both; 
-    background-color: rgb(15, 13, 13,0.9); 
-    color: rgba(204, 203, 203);
-    box-shadow: 0 0 7px 1px rgba(204, 203, 203, 0.658);
+    background-color: rgb(235, 212, 235,0.95); 
+    font-family: 'Raleway', sans-serif;
+    color: black;
+    box-shadow: 0 0 5px 1px rgb(235, 212, 235);
     border-radius: 10px; 
     cursor: pointer; 
     margin: 25px; 
@@ -134,39 +155,32 @@ body {
 
 #main section h2 {
     text-align: center; 
-    font-size: 24px; 
+    font-size: 22px; 
     margin: 40px; 
 }
 
 #main section p {
-    font-size: 17.5px; 
+    font-size: 18px; 
     line-height: 1.75; 
     margin: 50px;
 }
 
-#main section .technologies-img {
-    display: inline-block;
+#main section .technologies-img-container, #main section .contact-links-container {
+    display: flex; 
+    flex-wrap: wrap; 
     justify-content: center;
-    margin-bottom: 15px;
 }
 
-#main section .technologies-img img {
-    width: 75px;
-    height: 75px;
+#main section .technologies-img-container img {
+    width: 60px;
+    height: 60px;
     padding: 15px;
 }
 
-#main section .contact-links {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 15px;
-}
-
-#main section .contact-links img {
+#main section .contact-links-container img {
     height: 50px;
     width: 50px;
-    margin-right: 17px;
-    margin-left: 17px;
+    padding: 15px;
 }
 
 /* Keyframes */
