--- a/styles.css
+++ b/styles.css
@@ -182,6 +182,12 @@ video {
     text-align: center;
 }
 
+#main #section2 .project-subsection li {
+    font-family: 'Raleway', sans-serif;
+    font-size: 15px; 
+    line-height: 2; 
+}
+
 #main #section2 .project-subsection .project-subsection-nav-link {
     display: flex; 
     flex-wrap: wrap; 
@@ -195,8 +201,8 @@ video {
 }
 
 #main #section2 .project-subsection .demo-img-container img {
-    width: 450px;
-    height: 450px;
+    width: 600px;
+    height: 400px;
     padding: 30px;
 }
 
