Reorganize sections and update images and styles

--- a/styles.css
+++ b/styles.css
@@ -196,9 +196,10 @@ video {
 }
 
 #main #section2 .project-subsection .demo-img-container img {
-    width: 800px;
-    height: 550px;
-    padding: 30px;
+    width: 100%; /* La imagen se ajustará al 100% del contenedor */
+    height: auto; /* Altura automática basada en el ancho */
+    display: block; /* Elimina espacios entre imágenes (opcional) */
+    margin: 0 auto; /* Centrar las imágenes horizontalmente (opcional) */
 }
 
 #main #section2 .project-subsection img {
