--- a/styles.css
+++ b/styles.css
@@ -163,7 +163,7 @@ video {
     /* animation: bounce 2s ease-in-out infinite;  */
 }
 
-#main #section2 .project-subsection {
+#main #section2 .projects-subsection {
     margin: 0;
     padding: 0;
     width: 100%;
@@ -177,32 +177,32 @@ video {
     font-size: 20px; 
 }
 
-#main #section2 .project-subsection li {
+#main #section2 .projects-subsection li {
     font-family: 'Raleway', sans-serif;
     font-size: 15px; 
     line-height: 2; 
 }
 
-#main #section2 .project-subsection .project-subsection-nav-link {
+#main #section2 .projects-subsection .projects-subsection-nav-link {
     display: flex; 
     flex-wrap: wrap; 
     justify-content: center;
 }
 
-#main #section2 .project-subsection .demo-img-container  {
+#main #section2 .projects-subsection .demo-img-container  {
     display: flex; 
     flex-wrap: wrap; 
     justify-content: center;
 }
 
-#main #section2 .project-subsection .demo-img-container img {
+#main #section2 .projects-subsection .demo-img-container img {
     width: 95%; /* La imagen se ajustará al 100% del contenedor */
     height: auto; /* Altura automática basada en el ancho */
     display: block; /* Elimina espacios entre imágenes (opcional) */
     margin: 0 auto; /* Centrar las imágenes horizontalmente (opcional) */
 }
 
-#main #section2 .project-subsection img {
+#main #section2 .projects-subsection img {
     width: 60px;
     height: 60px;
     padding: 30px;
